--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "duplication": "npx jscpd --min-lines 6 \"app\" \"components\" \"lib\""
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.15",
@@ -17,7 +18,6 @@
     "@tiptap/extension-color": "^3.11.1",
     "@tiptap/extension-highlight": "^3.11.1",
     "@tiptap/extension-text-style": "^3.11.1",
-    "@tiptap/extension-underline": "^3.11.1",
     "@tiptap/react": "^3.11.1",
     "@tiptap/starter-kit": "^3.11.1",
     "@vercel/analytics": "^1.5.0",
@@ -27,7 +27,6 @@
     "isomorphic-dompurify": "^2.33.0",
     "lucide-react": "^0.548.0",
     "next": "^16.0.7",
-    "next-themes": "^0.4.6",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "sanitize-html": "^2.17.0",
@@ -40,9 +39,12 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/sanitize-html": "^2.16.0",
-    "baseline-browser-mapping": "^2.8.32",
     "eslint": "^9",
     "eslint-config-next": "16.0.0",
+    "eslint-plugin-unused-imports": "^4.3.0",
+    "jscpd": "^4.0.5",
+    "knip": "^5.71.0",
+    "postcss": "^8",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
