--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "duplication": "npx jscpd --min-lines 6 \"app\" \"components\" \"lib\""
+    "duplication": "npx jscpd --min-lines 6 \"app\" \"components\" \"lib\"",
+    "install-hooks": "node -e \"require('child_process').execSync(process.platform === 'win32' ? 'powershell -ExecutionPolicy Bypass -File scripts/setup-git-hooks.ps1' : 'sh scripts/install-hooks.sh', {stdio: 'inherit'})\"",
+    "postinstall": "npm run install-hooks"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.15",
