--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "eslint",
     "duplication": "npx jscpd --min-lines 6 \"app\" \"components\" \"lib\"",
     "install-hooks": "node -e \"require('child_process').execSync(process.platform === 'win32' ? 'powershell -ExecutionPolicy Bypass -File scripts/setup-git-hooks.ps1' : 'sh scripts/install-hooks.sh', {stdio: 'inherit'})\"",
-    "postinstall": "npm run install-hooks"
+    "postinstall": "npm run install-hooks",
+    "test": "vitest --run",
+    "test:watch": "vitest --watch",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --run --coverage"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.15",
@@ -37,6 +41,9 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -45,10 +52,12 @@
     "eslint-config-next": "16.0.0",
     "eslint-plugin-unused-imports": "^4.3.0",
     "jscpd": "^4.0.5",
+    "jsdom": "^27.2.0",
     "knip": "^5.71.0",
     "postcss": "^8",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^4.0.15"
   }
 }
