--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
+    "typecheck": "tsc --noEmit",
     "duplication": "npx jscpd --min-lines 6 \"app\" \"components\" \"lib\"",
     "install-hooks": "node -e \"require('child_process').execSync(process.platform === 'win32' ? 'powershell -ExecutionPolicy Bypass -File scripts/setup-git-hooks.ps1' : 'sh scripts/install-hooks.sh', {stdio: 'inherit'})\"",
     "postinstall": "npm run install-hooks",
     "test": "vitest --run",
-    "test:watch": "vitest --watch",
-    "test:ui": "vitest --ui",
-    "test:coverage": "vitest --run --coverage"
+    "test:coverage": "vitest --run --coverage",
+    "test:ci": "vitest run --passWithNoTests",
+    "prepare": "husky install",
+    "prepush": "npm lint && npm test:ci && npm typecheck"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.15",
@@ -48,6 +50,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/sanitize-html": "^2.16.0",
+    "@vitest/coverage-v8": "^4.0.15",
     "eslint": "^9",
     "eslint-config-next": "16.0.0",
     "eslint-plugin-unused-imports": "^4.3.0",
@@ -58,6 +61,7 @@
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5",
-    "vitest": "^4.0.15"
+    "vitest": "^4.0.15",
+    "husky": "^8.0.0"
   }
 }
