fix: use npm run in package.json

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test:coverage": "vitest --run --coverage",
     "test:ci": "vitest run --passWithNoTests",
     "prepare": "husky install",
-    "prepush": "npm lint && npm test:ci && npm typecheck"
+    "prepush": "npm run lint && npm run test:ci && npm run typecheck"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.15",
