--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,42 +2,40 @@ name: CI
 
 on:
   push:
-    branches:
-      - main
-      - develop
-      - feature/**
+    branches: ["main", "develop"]
   pull_request:
 
 jobs:
-  ci:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
+      - name: Checkout Repo
         uses: actions/checkout@v4
 
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 22
-          cache: "pnpm"
+          cache: 'pnpm'
 
-      - name: Setup pnpm
+      - name: Install pnpm
         uses: pnpm/action-setup@v4
         with:
           version: 9
+          run_install: false
 
-      - name: Install dependencies
+      - name: Install Dependencies
         run: pnpm install --frozen-lockfile
 
       - name: Lint
-        run: pnpm lint
-
-      - name: Test
-        run: pnpm test:ci
+        run: pnpm lint --max-warnings=0
 
       - name: Typecheck
         run: pnpm typecheck
+
+      - name: Tests
+        run: pnpm test:ci
 
       - name: Build
         run: pnpm build
