--- a/package.json
+++ b/package.json
@@ -8,12 +8,19 @@
     "start": "next start",
     "lint": "eslint",
     "typecheck": "tsc --noEmit",
+    "lint-staged": "lint-staged",
     "duplication": "npx jscpd --min-lines 6 \"app\" \"components\" \"lib\"",
     "test": "vitest --run",
     "test:coverage": "vitest --run --coverage",
     "test:ci": "vitest run --passWithNoTests",
     "prepare": "husky install",
     "prepush": "pnpm run lint && pnpm run test:ci && pnpm run typecheck"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "eslint --fix",
+      "vitest related --run"
+    ]
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.15",
@@ -52,14 +59,15 @@
     "eslint": "^9",
     "eslint-config-next": "16.0.0",
     "eslint-plugin-unused-imports": "^4.3.0",
+    "husky": "^8.0.0",
     "jscpd": "^4.0.5",
     "jsdom": "^27.2.0",
     "knip": "^5.71.0",
+    "lint-staged": "^16.2.7",
     "postcss": "^8",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5",
-    "vitest": "^4.0.15",
-    "husky": "^8.0.0"
+    "vitest": "^4.0.15"
   }
 }
